# palautusrepositorio

./: README.md
viikko1/nhl-statistics/: .coverage
viikko1/nhl-statistics/src/: index.py  statistics_service.py  yksikko_test.py
viikko1/nhl-statistics/src/tests/: statistics_test.py
viikko1/riippuvuuksien-injektointi/: .coverage  .gitignore
viikko1/riippuvuuksien-injektointi/src/: index.py
viikko2/git-branch-harjoitus/: index.py  osamaara.py
viikko2/nhl-reader/: .gitignore  .pylintrc  pyproject.toml
viikko2/nhl-reader/src/: index.py  player.py  player_reader.py  player_stats.py
viikko2/poetry-web/: pyproject.toml
viikko3/: retro.md
viikko4/verkkokauppa/: .coverage  .coveragerc
viikko5/tennis/: review.md
viikko5/tennis/src/: tennis_game.py
viikko6/laskin/src/: kayttoliittyma.py  laskintoiminnot.py
viikko6/query-language/src/: index.py  matchers.py  querybuilder.py
viikko7/: agent.md
viikko7/kivi-paperi-sakset/: .coverage  FEATURE_5WINS.md  README.md  TEST_SUMMARY.md  app.py  requirements.txt
viikko7/kivi-paperi-sakset-original/: .coverage  TESTING.md  pyproject.toml  run_tests.sh
viikko7/kivi-paperi-sakset-original/src/: .coverage  app.py  kps.py  tuomari.py
viikko7/kivi-paperi-sakset-original/src/static/: style.css
viikko7/kivi-paperi-sakset-original/src/templates/: index.html
viikko7/kivi-paperi-sakset-original/tests/: conftest.py  test_app.py  test_game_logic.py
viikko7/kivi-paperi-sakset/src/: index.py
viikko7/kivi-paperi-sakset/static/: script.js  style.css
viikko7/kivi-paperi-sakset/templates/: index.html
viikko7/kivi-paperi-sakset/tests/: test_app.py  test_kps.py  test_tekoaly.py  test_tekoaly_parannettu.py  test_tuomari.py
(+8 files in other folders)
